Fix infinite scroll jump on mobile

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -277,9 +277,14 @@ div.videoWithBackgroundImage > video {
     grid-row: 2;
   }
 
+  nav a {
+    scroll-margin: 20px;
+  }
+
   article {
     flex-shrink: 0;
-    scroll-margin-left: 20px;
+    padding-left: 20px;
+    margin-right: -20px;
   }
 
   .projectTitle {
